--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Chaska's Landing Page</title>
 </head>
 <body>
-    
+    <div class="header">
+        <h1>Header Logo</h1>
+        <ul>
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
+        </ul>
+    </div>
 </body>
 </html>
