--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
         <h1>Header Logo</h1>
-        <ul>
+        <ul class="right-links">
             <li><a href="#">header link one</a></li>
             <li><a href="#">header link two</a></li>
             <li><a href="#">header link three</a></li>
