--- a/index.html
+++ b/index.html
@@ -8,12 +8,19 @@
 </head>
 <body>
     <div class="header">
-        <h1>Header Logo</h1>
+        <h2>Header Logo</h2>
         <ul class="right-links">
             <li><a href="#">header link one</a></li>
             <li><a href="#">header link two</a></li>
             <li><a href="#">header link three</a></li>
         </ul>
+    </div>
+
+    <div class="content">
+        <h1>This website is awesome</h1>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <button>Sign up</button>
+        <img alt="Placeholder">
     </div>
 </body>
 </html>
