--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
     </div>
 
     <div class="content">
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-        <button>Sign up</button>
+        <div class="left-content-items">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button>Sign up</button>
+        </div>
         <img alt="Placeholder">
     </div>
 </body>
