--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
     <div class="header">
         <h2>Header Logo</h2>
         <ul class="right-links">
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
+            <li><a class="link" href="#">header link one</a></li>
+            <li><a class="link" href="#">header link two</a></li>
+            <li><a class="link" href="#">header link three</a></li>
         </ul>
     </div>
 
     <div class="content">
         <div class="left-content-items">
             <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <p class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
             <button>Sign up</button>
         </div>
-        <img alt="Placeholder">
+        <img class="content-image" alt="Placeholder">
     </div>
 </body>
 </html>
