--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="left-content-items">
             <h1>This website is awesome</h1>
             <p class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button>Sign up</button>
+            <button class="sign-up">Sign up</button>
         </div>
         <img class="content-image" alt="Placeholder">
     </div>
