Added card section content to HTML

--- a/index.html
+++ b/index.html
@@ -24,5 +24,17 @@
         </div>
         <img class="content-image" alt="Placeholder">
     </div>
+
+    <div class="cards-title">Some random information</div>
+
+    <img class="card" alt="place holder image">
+    <div class="card-text">this is some subtext under an illustration or image</div>
+    <img class="card" alt="place holder image">
+    <div class="card-text">this is some subtext under an illustration or image</div>
+    <img class="card" alt="place holder image">
+    <div class="card-text">this is some subtext under an illustration or image</div>
+    <img class="card" alt="place holder image">
+    <div class="card-text">this is some subtext under an illustration or image</div>
+
 </body>
 </html>
