Styled image cards

--- a/index.html
+++ b/index.html
@@ -25,16 +25,18 @@
         <img class="content-image" alt="Placeholder">
     </div>
 
-    <div class="cards-title">Some random information</div>
-
-    <img class="card" alt="place holder image">
-    <div class="card-text">this is some subtext under an illustration or image</div>
-    <img class="card" alt="place holder image">
-    <div class="card-text">this is some subtext under an illustration or image</div>
-    <img class="card" alt="place holder image">
-    <div class="card-text">this is some subtext under an illustration or image</div>
-    <img class="card" alt="place holder image">
-    <div class="card-text">this is some subtext under an illustration or image</div>
-
+    <div class="second-content">
+        <div class="cards-title">Some random information</div>
+        <div class="cards">
+            <img class="image" alt="place holder image">
+            <div class="card-text">this is some subtext under an illustration or image</div>
+            <img class="image" alt="place holder image">
+            <div class="card-text">this is some subtext under an illustration or image</div>
+            <img class="image" alt="place holder image">
+            <div class="card-text">this is some subtext under an illustration or image</div>
+            <img class="image" alt="place holder image">
+            <div class="card-text">this is some subtext under an illustration or image</div>
+        </div>
+    </div>
 </body>
 </html>
