Added styling and spacing to cards and image

--- a/index.html
+++ b/index.html
@@ -28,14 +28,22 @@
     <div class="second-content">
         <div class="cards-title">Some random information</div>
         <div class="cards">
-            <img class="image" alt="place holder image">
-            <div class="card-text">this is some subtext under an illustration or image</div>
-            <img class="image" alt="place holder image">
-            <div class="card-text">this is some subtext under an illustration or image</div>
-            <img class="image" alt="place holder image">
-            <div class="card-text">this is some subtext under an illustration or image</div>
-            <img class="image" alt="place holder image">
-            <div class="card-text">this is some subtext under an illustration or image</div>
+            <div class="card">
+                <img class="image" alt="place holder image">
+                <div class="card-text">this is some subtext under an illustration or image</div>
+            </div>      
+            <div class="card">
+                <img class="image" alt="place holder image">
+                <div class="card-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <img class="image" alt="place holder image">
+                <div class="card-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="card">
+                <img class="image" alt="place holder image">
+                <div class="card-text">this is some subtext under an illustration or image</div> 
+            </div>
         </div>
     </div>
 </body>
