--- a/index.html
+++ b/index.html
@@ -51,5 +51,13 @@
         <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
         <div class="quote-author">- Thor, God of Thunder</div>
     </div>
+
+    <div class="sign-up-section">
+        <div class="left-items">
+            <h2>Call to action! It's time!</h2>
+            <p class="subtext">Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button class="sign-up">Sign up</button>
+    </div>
 </body>
 </html>
