--- a/index.html
+++ b/index.html
@@ -59,5 +59,9 @@
         </div>
         <button class="sign-up">Sign up</button>
     </div>
+
+    <div class="footer">
+        <p class="subtext" class="footer-text">Copyright © The Odin Project 2023</p>
+    </div>
 </body>
 </html>
