Removed margin from foote

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </div>
 
     <div class="footer">
-        <p class="subtext" class="footer-text">Copyright © The Odin Project 2023</p>
+        <p class="subtext footer-text">Copyright © The Odin Project 2023</p>
     </div>
 </body>
 </html>
