Added image to main content

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
             <button>Sign up</button>
         </div>
-        <img class="content-image" alt="Placeholder">
+        <img class="content-image" src="images/night-sky.jpg" alt="Night Sky">
     </div>
 
     <div class="second-content">
