--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
         <div class="cards-title">Some random information</div>
         <div class="cards">
             <div class="card">
-                <img class="image" alt="place holder image">
+                <img class="image" src="images/camera.jpg" alt="place holder image">
                 <div class="card-text">this is some subtext under an illustration or image</div>
             </div>      
             <div class="card">
-                <img class="image" alt="place holder image">
+                <img class="image" src="images/landscape.jpg" alt="place holder image">
                 <div class="card-text">this is some subtext under an illustration or image</div>
             </div>
             <div class="card">
-                <img class="image" alt="place holder image">
+                <img class="image" src="images/polaroid.jpg" alt="place holder image">
                 <div class="card-text">this is some subtext under an illustration or image</div>
             </div>
             <div class="card">
-                <img class="image" alt="place holder image">
+                <img class="image" src="images/wood.jpg" alt="place holder image">
                 <div class="card-text">this is some subtext under an illustration or image</div> 
             </div>
         </div>
